--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         flex-direction: column;
         align-items: center;
         margin-bottom: 1rem;
+        top: 0;
+        left: 0;
       }
       .loading-message img {
         width: 100%;
